# Winstars_internship_test

./: .gitignore
task1/: README.md  demo.ipynb  main.py  mnist_classifier.py  pyproject.toml  requirements.txt
task1/interfaces/: mnist_classifier_interface.py
task1/logs/: cnn_20260319_104605.txt  nn_20260319_104352.txt  rf_20260319_104301.txt
task1/model/: cnn_classifier.py  nn_classifier.py  rf_classifier.py
task1/notebooks/: EDA_Handwritten_Digit_Recognition_(MNIST).ipynb
task2/: README.md  demo.ipynb  pipeline.py  pyproject.toml  requirements.txt
task2/ner/: inference.py  train.py
task2/ner/ner_model/: config.json  tokenizer.json
task2/vision/: inference.py  train.py
task2/vision/model/: label_classes.npy
