[tool.poetry]
name = "task1"
version = "0.1.0"
description = "MNIST classification with Random Forest, Feed-Forward NN, and CNN"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26"
scikit-learn = "^1.3"
tensorflow = "^2.17"

[tool.poetry.group.dev.dependencies]
mypy = "1.19.0"
ruff = "0.14.8"

[tool.poetry.scripts]
task1-cli = "main:main"

[tool.mypy]
python_version = "3.11"
pretty = true
show_error_codes = true
strict = true
warn_unreachable = true
ignore_missing_imports = true
files = ["task1"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["I", "SIM", "UP", "PL", "RUF", "B", "E", "F"]
ignore = ["PLR0913"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"